force-app/main/default/objects/AppointmentSlotSummary__c/AppointmentSlotSummary__c.object-meta.xml
<CustomObject>
    <label>Appointment Slot Summary</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Slot Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>