force-app/main/default/objects/AppointmentSlotSummary__c/fields/Available_Slots_Today__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots_Today__c</fullName>
    <label>Available Slots Today</label>
    <summaryFilterItems>
        <field>AppointmentSlot__c.Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AppointmentSlot__c.IsToday__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AppointmentSlot__c.AppointmentSlotSummary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>