force-app/main/default/objects/AppointmentSlotSummary__c/fields/Available_Slots_Tomorrow__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots_Tomorrow__c</fullName>
    <label>Available Slots Tomorrow</label>
    <summaryFilterItems>
        <field>AppointmentSlot__c.Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AppointmentSlot__c.IsTomorrow__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AppointmentSlot__c.AppointmentSlotSummary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>