force-app/main/default/objects/AppointmentSlotSummary__c/fields/EngagementChannelType__c.field-meta.xml
<CustomField>
    <fullName>EngagementChannelType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement Channel Type</label>
    <referenceTo>EngagementChannelType</referenceTo>
    <relationshipLabel>Appointment Slot Summaries</relationshipLabel>
    <relationshipName>AppointmentSlotSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>