force-app/main/default/objects/AppointmentSlotSummary__c/fields/NextStartDate__c.field-meta.xml
<CustomField>
    <fullName>NextStartDate__c</fullName>
    <label>Next Start Date</label>
    <summarizedField>AppointmentSlot__c.StartTime__c</summarizedField>
    <summaryFilterItems>
        <field>AppointmentSlot__c.Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AppointmentSlot__c.AppointmentSlotSummary__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>