force-app/main/default/objects/AppointmentSlotSummary__c/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Appointment Slot Summaries</relationshipLabel>
    <relationshipName>AppointmentSlotSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>