force-app/main/default/objects/AppointmentSlotSummary__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Appointment Slot Summaries</relationshipLabel>
    <relationshipName>AppointmentSlotSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>